@@ -199,7 +199,7 @@ GeometryRect::GeometryRect (Block& al)
           edge_to_.push_back (last_cell);
           edge_area_.push_back (x_distance[column]);
 	  edge_length_.push_back (last_z - next_z);
-	  daisy_assert (last_z - next_z > 0.0);
+	  daisy_assert (edge_length_[edge_length_.size () - 1U] > 0.0);
           edge_center_z_.push_back (row == 0 ? 0.0 : z_end[row - 1]);
           edge_center_x_.push_back (x_center[column]);
           std::vector<int> corners;
@@ -219,6 +219,7 @@ GeometryRect::GeometryRect (Block& al)
       edge_to_.push_back (last_cell);
       edge_area_.push_back (x_distance[column]);
       edge_length_.push_back (2.0 * (last_z - z_end[cell_rows () - 1]));
+      daisy_assert (edge_length_[edge_length_.size () - 1U] > 0.0);
       edge_center_z_.push_back (z_end[cell_rows () - 1]);
       edge_center_x_.push_back (x_center[column]);
       std::vector<int> corners;
@@ -237,7 +238,7 @@ GeometryRect::GeometryRect (Block& al)
       edge_from_.push_back (cell_left);
       for (size_t column = 0; column < cell_columns (); column++)
         {
-	  const double next_x = x_center[row];
+	  const double next_x = x_center[column];
           edge_to_.push_back (cell_index (row, column));
           std::vector<int> corners;
           corners.push_back (corner_index (row    , column)); // W
@@ -245,6 +246,7 @@ GeometryRect::GeometryRect (Block& al)
           edge_corners_.push_back (corners);
           edge_center_x_.push_back (x_end[column]);
 	  edge_length_.push_back (next_x - last_x);
+	  daisy_assert (edge_length_[edge_length_.size () - 1U] > 0.0);
 	  last_x = next_x;
           edge_from_.push_back (cell_index (row, column));
         }
@@ -254,6 +256,7 @@ GeometryRect::GeometryRect (Block& al)
       corners.push_back (corner_index (row + 1, cell_columns ())); // W
       edge_corners_.push_back (corners);
       edge_length_.push_back (2.0 * (x_end[cell_columns () - 1] - last_x));
+      daisy_assert (edge_length_[edge_length_.size () - 1U] > 0.0);
       edge_area_.insert (edge_area_.end (), edge_columns (), z_distance[row]);
       edge_center_z_.insert (edge_center_z_.end (), edge_columns (), 
                              z_center[row]);
